--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "prepare": "tsc",
     "start": "node ./lib/index.js",
-    "dev": "tsnd --respawn ./src/index.ts",
+    "dev": "tsnd --respawn --clear ./src/index.ts",
+    "ml": "ts-node ./src/ml.ts",
     "prettier": "prettier --write \"**/**.{ts,js,json}\""
   },
   "dependencies": {
@@ -21,6 +22,8 @@
     "typescript": "4.0.3",
     "jest": "26.6.1",
     "@types/node": "14.11.8",
-    "@types/jest": "26.0.15"
+    "@types/jest": "26.0.15",
+    "axios": "0.21.0",
+    "form-data": "3.0.0"
   }
 }
